--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,16 @@
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
+
+
+xcuserdata/
+.DS_Store/
+Pods/
+Podfile.lock
+
+
+
+
 ## Build generated
 build/
 DerivedData/
